/home/fox/release/dtrace/2008/dtrace-20080415.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -1,5 +1,12 @@
 obj-m += dtrace.o
+dtrace-objs := dtrace.o dtrace_linux.o
 
-EXTRA_CFLAGS += -I$(M)/../.. -I$(M)/../../sys -I$(M)/../../linux -I$(M)/../../common/ctf \
-	-I$(M)/../../uts/common -I$(M)/../include -D_KERNEL
+EXTRA_CFLAGS += \
+	-I$(M)/../.. \
+	-I$(M)/../../sys \
+	-I$(M)/../../linux \
+	-I$(M)/../../common/ctf \
+	-I$(M)/../../uts/common \
+	-I$(M)/../include \
+	-D_KERNEL
 #CFLAGS += -I$(M)/../../common/ctf -I$(M)/../../uts/common/sys -D_KERNEL
