/home/fox/release/dtrace/2008/dtrace-20080416.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -1,5 +1,5 @@
-obj-m += dtrace.o
-dtrace-objs := dtrace.o dtrace_linux.o
+dtracedrv-objs := dtrace.o dtrace_linux.o dtrace_isa.o
+obj-m += dtracedrv.o
 
 EXTRA_CFLAGS += \
 	-I$(M)/../.. \
@@ -10,3 +10,9 @@ EXTRA_CFLAGS += \
 	-I$(M)/../include \
 	-D_KERNEL
 #CFLAGS += -I$(M)/../../common/ctf -I$(M)/../../uts/common/sys -D_KERNEL
+
+dtracedrv.o: $(dtracedrv-objs)
+	$(LD) -r -o $@ $(dtrace-objs)
+
+clean:
+	rm -f *.o *.ko *.bak .*.cmd *.mod.c
