/home/fox/release/dtrace/2008/dtrace-20080417.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -1,4 +1,10 @@
-dtracedrv-objs := dtrace.o dtrace_linux.o dtrace_isa.o
+dtracedrv-objs := \
+	dtrace.o \
+	dtrace_asm.o \
+	dtrace_isa.o \
+	dtrace_linux.o \
+	dtrace_subr.o
+
 obj-m += dtracedrv.o
 
 EXTRA_CFLAGS += \
