/home/fox/release/dtrace/2008/dtrace-20080420.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -1,3 +1,7 @@
+#! /bin/make
+#
+# Dont run this directly - use the make-me script
+
 dtracedrv-objs := \
 	dtrace.o \
 	dtrace_asm.o \
@@ -9,18 +13,21 @@ obj-m += dtracedrv.o
 
 EXTRA_CFLAGS += \
 	-I$(M)/../.. \
-	-I$(M)/../../sys \
+	-I$(M)/../include \
 	-I$(M)/../../linux \
 	-I$(M)/../../common/ctf \
 	-I$(M)/../../uts/common \
-	-I$(M)/../include \
 	-D_KERNEL
 #CFLAGS += -I$(M)/../../common/ctf -I$(M)/../../uts/common/sys -D_KERNEL
-
 dtracedrv.o: $(dtracedrv-objs)
 	$(LD) -r -o $@ $(dtrace-objs)
 
 $(dtracedrv-objs): dtrace_linux.h $(M)/../../linux/linux_types.h
 
 clean:
-	rm -f *.o *.ko *.bak .*.cmd *.mod.c
+	rm -f *.o *.ko *.bak .*.d .*.cmd *.mod.c
+ins:
+	setuid root insmod dtracedrv.ko
+rm unl:
+	setuid root rmmod dtracedrv
+
