/home/fox/release/dtrace/2008/dtrace-20080421.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -27,6 +27,7 @@ $(dtracedrv-objs): dtrace_linux.h $(M)/../../linux/linux_types.h
 clean:
 	rm -f *.o *.ko *.bak .*.d .*.cmd *.mod.c
 ins:
+	sync ; sync
 	setuid root insmod dtracedrv.ko
 rm unl:
 	setuid root rmmod dtracedrv
