--- a/libproc/common/makefile
+++ b/libproc/common/makefile
@@ -1,9 +1,14 @@
 CC=gcc -g
-CPPFLAGS += -I../common -I../../common/ctf -I../../uts/common/ \
-	-I../../linux -I../lib/libproc/common -I../libctf/common -DCTF_OLD_VERSIONS
+CPPFLAGS += -I../common \
+	-I../../common/ctf \
+	-I../../uts/common/ \
+	-I../../linux \
+	-I../../lib/libproc/common \
+	-I../../libctf \
+	-DCTF_OLD_VERSIONS
 CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64
 
-LIB = libproc.a
+LIB = ../../build/libproc.a
 
 $(LIB): \
 	$(LIB)(P32ton.o) \
