/home/fox/release/dtrace/2008/dtrace-20080427.tar.bz2

--- a/cmd/dtrace/makefile
+++ b/cmd/dtrace/makefile
@@ -1,24 +1,29 @@
-CFLAGS=-g
+CFLAGS=-g -W
 LIBELF=/usr/lib/libelf.so.1
 BINDIR=../../build
-dtrace: dtrace.o \
+LIBS = \
 	$(BINDIR)/libctf.a \
 	$(BINDIR)/liblinux.a \
 	$(BINDIR)/libdtrace.a \
 	$(BINDIR)/libproc.a
+
+all:	dtrace
+
+dtrace: dtrace.o $(LIBS)
+	libelf=$(LIBELF) ; \
+	if [ -f /usr/lib64/libelf.so.1 ]; then \
+		libelf=/usr/lib64/libelf.so.1 ; \
+	fi ; \
 	$(CC) $(CFLAGS) -o dtrace \
-		-L../../libctf \
-		-L../../libdtrace/common \
-		-L../../libproc/common \
-		-L../../liblinux \
-		dtrace.o -ldtrace -lctf -llinux -lpthread $(LIBELF) -ldl
+		-L../../build \
+		dtrace.o -ldtrace -lctf -llinux -lpthread $$libelf -ldl
 
 dtrace.o: dtrace.c
 	$(CC) $(CFLAGS) -c \
 		-I../../uts/common \
-		-I..//libctf \
-		-I..//libdtrace/common \
-		-I..//libproc/common \
+		-I../../libctf \
+		-I../../libdtrace/common \
+		-I../../libproc/common \
 		-I../../linux \
 		dtrace.c
 
