/home/fox/release/dtrace/2008/dtrace-20080502.tar.bz2

--- a/drivers/fbt/Makefile
+++ b/drivers/fbt/Makefile
@@ -3,6 +3,7 @@
 # Dont run this directly - use the make-me script
 
 fbt-objs := \
+	dtrace_subr.o \
 	fbt_linux.o
 
 obj-m += fbt.o
@@ -17,13 +18,15 @@ EXTRA_CFLAGS += \
 	-D_KERNEL
 #CFLAGS += -I$(M)/../../common/ctf -I$(M)/../../uts/common/sys -D_KERNEL
 fbt.o: $(fbt-objs)
-	$(LD) -r -o $@ $(dtrace-objs)
+	$(LD) -r -o $@ $(fbt-objs)
 
 $(fbt-objs): $(M)/../../linux/linux_types.h
 
 clean:
 	rm -f *.o *.ko *.bak .*.d .*.cmd *.mod.c
 ins:
+	sync ; sync
+	-setuid root rmmod fbt
 	sync ; sync
 	setuid root insmod fbt.ko
 unl:
