--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -1,36 +1,36 @@
-#! /bin/make
-#
-# Dont run this directly - use the make-me script
-
 dtracedrv-objs := \
+	ctf_subr.o \
+	ctf_types.o \
+	ctf_hash.o \
+	ctf_util.o \
+	ctf_mod.o \
+	ctf_open.o \
+	ctf_lookup.o \
 	cyclic.o \
+	dis_tables.o \
 	dtrace.o \
 	dtrace_asm.o \
 	dtrace_ioctl.o \
 	dtrace_isa.o \
 	dtrace_linux.o \
-	dtrace_subr.o
+	dtrace_subr.o \
+	fasttrap_linux.o \
+	fbt_linux.o \
+	instr_size.o \
+	uncompress.o
 
-obj-m += dtracedrv.o
+obj-m := dtracedrv.o
 
 EXTRA_CFLAGS += \
+	-I$(M) \
 	-I$(M)/../.. \
 	-I$(M)/../include \
 	-I$(M)/../../linux \
 	-I$(M)/../../common/ctf \
 	-I$(M)/../../uts/common \
-	-D_KERNEL
-#CFLAGS += -I$(M)/../../common/ctf -I$(M)/../../uts/common/sys -D_KERNEL
-dtracedrv.o: $(dtracedrv-objs)
-	$(LD) -r -o $@ $(dtrace-objs)
-
-$(dtracedrv-objs): dtrace_linux.h $(M)/../../linux/linux_types.h
+	-I$(M)/../dtrace \
+	-D_KERNEL -DCTF_OLD_VERSIONS
 
 clean:
-	rm -rf .tmp_versions *.o *.ko *.bak .*.d .*.cmd *.mod.c Module.symvers
-ins:
-	sync ; sync
-	setuid root insmod dtracedrv.ko
-rm unl:
-	setuid root rmmod dtracedrv
+	rm -rf .tmp_versions *.a *.o *.ko *.bak .*.d .*.cmd *.mod.c Module.symvers
 
