/home/fox/release/dtrace/2008/dtrace-20080511.tar.bz2

--- a/libdtrace/common/io.d.in
+++ b/libdtrace/common/io.d.in
@@ -1,13 +1,29 @@
 /*
- * Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ * CDDL HEADER START
  *
  * The contents of this file are subject to the terms of the
- * Common Development and Distribution License, Version 1.0 only.
- * See the file usr/src/LICENSING.NOTICE in this distribution or
- * http://www.opensolaris.org/license/ for details.
+ * Common Development and Distribution License (the "License").
+ * You may not use this file except in compliance with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
+ */
+/*
+ * Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+ * Use is subject to license terms.
  */
 
-#pragma ident	"@(#)io.d.in	1.3	04/09/28 SMI"
+#pragma ident	"@(#)io.d.in	1.6	06/04/03 SMI"
 
 #pragma D depends_on module unix
 #pragma D depends_on provider io
@@ -42,12 +58,14 @@ typedef struct bufinfo {
 	dev_t b_edev;			/* extended device */
 } bufinfo_t;
 
+#pragma D binding "1.0" translator
 translator bufinfo_t < struct buf *B > {
 	b_flags = B->b_flags;
 	b_addr = B->b_un.b_addr;
 	b_bcount = B->b_bcount;
 	b_lblkno = B->_b_blkno._f;
 	b_blkno = sizeof (long) == 8 ? B->_b_blkno._f : B->_b_blkno._p._l;
+	b_resid = B->b_resid;
 	b_bufsize = B->b_bufsize;
 	b_iodone = (caddr_t)B->b_iodone;
 	b_error = B->b_error;
@@ -63,6 +81,7 @@ typedef struct devinfo {
 	string dev_pathname;		/* pathname of device */
 } devinfo_t;
 
+#pragma D binding "1.0" translator
 translator devinfo_t < struct buf *B > {
 	dev_major = B->b_dip != NULL ? getmajor(B->b_edev) :
 	    getmajor(B->b_file->v_vfsp->vfs_dev);
@@ -92,8 +111,10 @@ typedef struct fileinfo {
 	offset_t fi_offset;		/* offset within file */
 	string fi_fs;			/* filesystem */
 	string fi_mount;		/* mount point of file system */
+	int fi_oflags;			/* open(2) flags for file descriptor */
 } fileinfo_t;
 
+#pragma D binding "1.0" translator
 translator fileinfo_t < struct buf *B > {
 	fi_name = B->b_file == NULL ? "<none>" :
 	    B->b_file->v_path == NULL ? "<unknown>" :
@@ -111,4 +132,87 @@ translator fileinfo_t < struct buf *B > {
 	    B->b_file->v_vfsp->vfs_vnodecovered == NULL ? "/" :
 	    B->b_file->v_vfsp->vfs_vnodecovered->v_path == NULL ? "<unknown>" :
 	    cleanpath(B->b_file->v_vfsp->vfs_vnodecovered->v_path);
+	fi_oflags = 0;
+};
+
+/*
+ * The following inline constants can be used to examine fi_oflags when using
+ * the fds[] array or a translated fileinfo_t.  Note that the various open
+ * flags behave as a bit-field *except* for O_RDONLY, O_WRONLY, and O_RDWR.
+ * To test the open mode, you write code similar to that used with the fcntl(2)
+ * F_GET[X]FL command, such as: if ((fi_oflags & O_ACCMODE) == O_WRONLY).
+ */
+inline int O_ACCMODE = @O_ACCMODE@;
+#pragma D binding "1.1" O_ACCMODE
+
+inline int O_RDONLY = @O_RDONLY@;
+#pragma D binding "1.1" O_RDONLY
+inline int O_WRONLY = @O_WRONLY@;
+#pragma D binding "1.1" O_WRONLY
+inline int O_RDWR = @O_RDWR@;
+#pragma D binding "1.1" O_RDWR
+
+inline int O_APPEND = @O_APPEND@;
+#pragma D binding "1.1" O_APPEND
+inline int O_CREAT = @O_CREAT@;
+#pragma D binding "1.1" O_CREAT
+inline int O_DSYNC = @O_DSYNC@;
+#pragma D binding "1.1" O_DSYNC
+inline int O_EXCL = @O_EXCL@;
+#pragma D binding "1.1" O_EXCL
+inline int O_LARGEFILE = @O_LARGEFILE@;
+#pragma D binding "1.1" O_LARGEFILE
+inline int O_NOCTTY = @O_NOCTTY@;
+#pragma D binding "1.1" O_NOCTTY
+inline int O_NONBLOCK = @O_NONBLOCK@;
+#pragma D binding "1.1" O_NONBLOCK
+inline int O_NDELAY = @O_NDELAY@;
+#pragma D binding "1.1" O_NDELAY
+inline int O_RSYNC = @O_RSYNC@;
+#pragma D binding "1.1" O_RSYNC
+inline int O_SYNC = @O_SYNC@;
+#pragma D binding "1.1" O_SYNC
+inline int O_TRUNC = @O_TRUNC@;
+#pragma D binding "1.1" O_TRUNC
+inline int O_XATTR = @O_XATTR@;
+#pragma D binding "1.1" O_XATTR
+
+#pragma D binding "1.1" translator
+translator fileinfo_t < struct file *F > {
+	fi_name = F == NULL ? "<none>" :
+	    F->f_vnode->v_path == NULL ? "<unknown>" :
+	    basename(cleanpath(F->f_vnode->v_path));
+	fi_dirname = F == NULL ? "<none>" :
+	    F->f_vnode->v_path == NULL ? "<unknown>" :
+	    dirname(cleanpath(F->f_vnode->v_path));
+	fi_pathname = F == NULL ? "<none>" :
+	    F->f_vnode->v_path == NULL ? "<unknown>" :
+	    cleanpath(F->f_vnode->v_path);
+	fi_offset = F == NULL ? 0 : F->f_offset;
+	fi_fs = F == NULL ? "<none>" : stringof(F->f_vnode->v_op->vnop_name);
+	fi_mount = F == NULL ? "<none>" :
+	    F->f_vnode->v_vfsp->vfs_vnodecovered == NULL ? "/" :
+	    F->f_vnode->v_vfsp->vfs_vnodecovered->v_path == NULL ? "<unknown>" :
+	    cleanpath(F->f_vnode->v_vfsp->vfs_vnodecovered->v_path);
+	fi_oflags = F == NULL ? 0 : F->f_flag + (int)@FOPEN@;
+};
+
+inline fileinfo_t fds[int fd] = xlate <fileinfo_t> (
+    fd >= 0 && fd < curthread->t_procp->p_user.u_finfo.fi_nfiles ?
+    curthread->t_procp->p_user.u_finfo.fi_list[fd].uf_file : NULL);
+
+#pragma D attributes Stable/Stable/Common fds
+#pragma D binding "1.1" fds
+
+#pragma D binding "1.2" translator
+translator fileinfo_t < struct vnode *V > {
+	fi_name = V->v_path == NULL ? "<unknown>" :
+	    basename(cleanpath(V->v_path));
+	fi_dirname = V->v_path == NULL ? "<unknown>" :
+	    dirname(cleanpath(V->v_path));
+	fi_pathname = V->v_path == NULL ? "<unknown>" : cleanpath(V->v_path);
+	fi_fs = stringof(V->v_op->vnop_name);
+	fi_mount = V->v_vfsp->vfs_vnodecovered == NULL ? "/" :
+	    V->v_vfsp->vfs_vnodecovered->v_path == NULL ? "<unknown>" :
+	    cleanpath(V->v_vfsp->vfs_vnodecovered->v_path);
 };
