--- a/libdtrace/common/makefile
+++ b/libdtrace/common/makefile
@@ -34,6 +34,7 @@ all: $(LIB)
 
 $(LIB): $(LIB)(dt_aggregate.o) \
 	$(LIB)(dt_as.o) \
+	$(LIB)(dt_buf.o) \
 	$(LIB)(dt_cc.o) \
 	$(LIB)(dt_cg.o) \
 	$(LIB)(dt_consume.o) \
@@ -51,9 +52,11 @@ $(LIB): $(LIB)(dt_aggregate.o) \
 	$(LIB)(dt_list.o) \
 	$(LIB)(dt_module.o) \
 	$(LIB)(dt_map.o) \
+	$(LIB)(dt_names.o) \
 	$(LIB)(dt_open.o) \
 	$(LIB)(dt_options.o) \
 	$(LIB)(dt_parser.o) \
+	$(LIB)(dt_pcb.o) \
 	$(LIB)(dt_pid.o) \
 	$(LIB)(dt_pragma.o) \
 	$(LIB)(dt_printf.o) \
@@ -65,10 +68,13 @@ $(LIB): $(LIB)(dt_aggregate.o) \
 	$(LIB)(dt_strtab.o) \
 	$(LIB)(dt_subr.o) \
 	$(LIB)(dt_work.o) \
-	$(LIB)(dt_xlator.o)
+	$(LIB)(dt_xlator.o) \
+	$(LIB)(stubs.o)
 
 dt_errtags.c: dt_errtags.h mkerrtags.sh
 	mkerrtags.sh <dt_errtags.h > dt_errtags.c
+dt_names.c: mknames.sh
+	mknames.sh <../../uts/common/sys/dtrace.h | sed -e 's/\\n/\n/g' > dt_names.c
 
 $(LIB)(dt_grammar.o): dt_grammar.y $(H)
 	$(YACC) -d dt_grammar.y
