--- a/libdtrace/common/procfs.d.in
+++ b/libdtrace/common/procfs.d.in
@@ -1,13 +1,30 @@
 /*
- * Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ * CDDL HEADER START
  *
  * The contents of this file are subject to the terms of the
- * Common Development and Distribution License, Version 1.0 only.
- * See the file usr/src/LICENSING.NOTICE in this distribution or
- * http://www.opensolaris.org/license/ for details.
+ * Common Development and Distribution License (the "License").
+ * You may not use this file except in compliance with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
  */
 
-#pragma ident	"@(#)procfs.d.in	1.9	04/09/27 SMI"
+/*
+ * Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+ * Use is subject to license terms.
+ */
+
+#pragma ident	"@(#)procfs.d.in	1.14	07/02/23 SMI"
 
 /*
  * This file defines the standard set of inlines and translators to be made
@@ -15,9 +32,6 @@
  */
 
 #pragma D depends_on module procfs
-
-inline int errno = curthread->t_lwp ? curthread->t_lwp->lwp_errno : 0;
-#pragma D binding "1.0" errno
 
 /*
  * The following miscellaneous constants are used by the proc(4) translators
@@ -35,6 +49,8 @@ inline char SIDL = @SIDL@;
 #pragma D binding "1.0" SIDL
 inline char SONPROC = @SONPROC@;
 #pragma D binding "1.0" SONPROC
+inline char SWAIT = @SWAIT@;
+#pragma D binding "1.0" SWAIT
 
 inline int PR_STOPPED = @PR_STOPPED@;
 #pragma D binding "1.0" PR_STOPPED
@@ -56,12 +72,18 @@ inline int PR_DETACH = @PR_DETACH@;
 #pragma D binding "1.0" PR_DETACH
 inline int PR_DAEMON = @PR_DAEMON@;
 #pragma D binding "1.0" PR_DAEMON
+inline int PR_IDLE = @PR_IDLE@;
+#pragma D binding "1.4" PR_IDLE
 inline int PR_ISSYS = @PR_ISSYS@;
 #pragma D binding "1.0" PR_ISSYS
 inline int PR_VFORKP = @PR_VFORKP@;
 #pragma D binding "1.0" PR_VFORKP
 inline int PR_ORPHAN = @PR_ORPHAN@;
 #pragma D binding "1.0" PR_ORPHAN
+inline int PR_NOSIGCHLD = @PR_NOSIGCHLD@;
+#pragma D binding "1.4" PR_NOSIGCHLD
+inline int PR_WAITPID = @PR_WAITPID@;
+#pragma D binding "1.4" PR_WAITPID
 inline int PR_FORK = @PR_FORK@;
 #pragma D binding "1.0" PR_FORK
 inline int PR_RLC = @PR_RLC@;
@@ -78,8 +100,6 @@ inline int PR_PTRACE = @PR_PTRACE@;
 #pragma D binding "1.0" PR_PTRACE
 inline int PR_MSFORK = @PR_MSFORK@;
 #pragma D binding "1.0" PR_MSFORK
-inline int PR_IDLE = @PR_IDLE@;
-#pragma D binding "1.0" PR_IDLE
 
 inline char PR_MODEL_ILP32 = @PR_MODEL_ILP32@;
 #pragma D binding "1.0" PR_MODEL_ILP32
@@ -279,6 +299,8 @@ translator lwpsinfo_t < kthread_t *T > {
 	    ((T == T->t_procp->p_agenttp) ? PR_AGENT : 0) |
 	    ((!(T->t_proc_flag & @TP_TWAIT@)) ? PR_DETACH : 0) |
 	    ((T->t_proc_flag & @TP_DAEMON@) ? PR_DAEMON : 0) |
+	    ((T->t_procp->p_pidflag & @CLDNOSIGCHLD@) ? PR_NOSIGCHLD : 0) |
+	    ((T->t_procp->p_pidflag & @CLDWAITPID@) ? PR_WAITPID : 0) |
 	    ((T->t_procp->p_proc_flag & @P_PR_FORK@) ? PR_FORK : 0) |
 	    ((T->t_procp->p_proc_flag & @P_PR_RUNLCL@) ? PR_RLC : 0) |
 	    ((T->t_procp->p_proc_flag & @P_PR_KILLCL@) ? PR_KLC : 0) |
@@ -302,14 +324,16 @@ translator lwpsinfo_t < kthread_t *T > {
 	    (T->t_state == @TS_RUN@) ? SRUN :
 	    (T->t_state == @TS_ONPROC@) ? SONPROC :
 	    (T->t_state == @TS_ZOMB@) ? SZOMB :
-	    (T->t_state == @TS_STOPPED@) ? SSTOP : 0;
+	    (T->t_state == @TS_STOPPED@) ? SSTOP :
+	    (T->t_state == @TS_WAIT@) ? SWAIT : 0;
 
 	pr_sname = (T->t_proc_flag & @TP_PRVSTOP@) ? 'T' :
 	    (T->t_state == @TS_SLEEP@) ? 'S' :
 	    (T->t_state == @TS_RUN@) ? 'R' :
 	    (T->t_state == @TS_ONPROC@) ? 'O' :
 	    (T->t_state == @TS_ZOMB@) ? 'Z' :
-	    (T->t_state == @TS_STOPPED@) ? 'T' : '?';
+	    (T->t_state == @TS_STOPPED@) ? 'T' :
+	    (T->t_state == @TS_WAIT@) ? 'W' : '?';
 
 	pr_syscall = T->t_sysnum;
 	pr_pri = T->t_pri;
@@ -317,6 +341,7 @@ translator lwpsinfo_t < kthread_t *T > {
 	pr_onpro = T->t_cpu->cpu_id;
 	pr_bindpro = T->t_bind_cpu;
 	pr_bindpset = T->t_bind_pset;
+	pr_lgrp = T->t_lpl->lpl_lgrpid;
 };
 
 inline psinfo_t *curpsinfo = xlate <psinfo_t *> (curthread->t_procp);
@@ -337,18 +362,3 @@ inline string root = curthread->t_procp->p_user.u_rdir == NULL ? "/" :
     stringof(curthread->t_procp->p_user.u_rdir->v_path);
 #pragma D attributes Stable/Stable/Common root
 #pragma D binding "1.0" root
-
-/*
- * ppid, uid and gid are used frequently enough to merit their own inlines...
- */
-inline uid_t ppid = curpsinfo->pr_ppid;
-#pragma D attributes Stable/Stable/Common ppid
-#pragma D binding "1.0" ppid
-
-inline uid_t uid = curpsinfo->pr_uid;
-#pragma D attributes Stable/Stable/Common uid
-#pragma D binding "1.0" uid
-
-inline gid_t gid = curpsinfo->pr_gid;
-#pragma D attributes Stable/Stable/Common gid
-#pragma D binding "1.0" gid
