--- a/libdtrace/common/procfs.sed.in
+++ b/libdtrace/common/procfs.sed.in
@@ -1,13 +1,30 @@
 /*
- * Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+ * CDDL HEADER START
  *
  * The contents of this file are subject to the terms of the
- * Common Development and Distribution License, Version 1.0 only.
- * See the file usr/src/LICENSING.NOTICE in this distribution or
- * http://www.opensolaris.org/license/ for details.
+ * Common Development and Distribution License (the "License").
+ * You may not use this file except in compliance with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
  */
 
-#pragma ident	"@(#)procfs.sed.in	1.2	04/03/20 SMI"
+/*
+ * Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+ * Use is subject to license terms.
+ */
+
+#pragma ident	"@(#)procfs.sed.in	1.5	07/02/23 SMI"
 
 /*
  * This file is a sed script which is first preprocessed by cpp or cc -E to
@@ -39,6 +56,7 @@ SED_REPLACE(TS_RUN)
 SED_REPLACE(TS_ONPROC)
 SED_REPLACE(TS_ZOMB)
 SED_REPLACE(TS_STOPPED)
+SED_REPLACE(TS_WAIT)
 
 SED_REPLACE(P_PR_FORK)
 SED_REPLACE(P_PR_RUNLCL)
@@ -58,6 +76,10 @@ SED_REPLACE(SZOMB)
 SED_REPLACE(SSTOP)
 SED_REPLACE(SIDL)
 SED_REPLACE(SONPROC)
+SED_REPLACE(SWAIT)
+
+SED_REPLACE(CLDNOSIGCHLD)
+SED_REPLACE(CLDWAITPID)
 
 SED_REPLACE(PR_STOPPED)
 SED_REPLACE(PR_ISTOP)
@@ -69,9 +91,12 @@ SED_REPLACE(PR_ASLWP)
 SED_REPLACE(PR_AGENT)
 SED_REPLACE(PR_DETACH)
 SED_REPLACE(PR_DAEMON)
+SED_REPLACE(PR_IDLE)
 SED_REPLACE(PR_ISSYS)
 SED_REPLACE(PR_VFORKP)
 SED_REPLACE(PR_ORPHAN)
+SED_REPLACE(PR_NOSIGCHLD)
+SED_REPLACE(PR_WAITPID)
 SED_REPLACE(PR_FORK)
 SED_REPLACE(PR_RLC)
 SED_REPLACE(PR_KLC)
@@ -80,7 +105,6 @@ SED_REPLACE(PR_MSACCT)
 SED_REPLACE(PR_BPTADJ)
 SED_REPLACE(PR_PTRACE)
 SED_REPLACE(PR_MSFORK)
-SED_REPLACE(PR_IDLE)
 
 SED_REPLACE(PR_MODEL_ILP32)
 SED_REPLACE(PR_MODEL_LP64)
