--- a/cmd/dtrace/demo/Makefile
+++ b/cmd/dtrace/demo/Makefile
@@ -1,12 +1,28 @@
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only.
-# See the file usr/src/LICENSING.NOTICE in this distribution or
-# http://www.opensolaris.org/license/ for details.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
-#pragma ident	"@(#)Makefile	1.2	04/12/18 SMI"
+# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+# or http://www.opensolaris.org/os/licensing.
+# See the License for the specific language governing permissions
+# and limitations under the License.
+#
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+# If applicable, add the following below this CDDL HEADER, with the
+# fields enclosed by brackets "[]" replaced with your own identifying
+# information: Portions Copyright [yyyy] [name of copyright owner]
+#
+# CDDL HEADER END
+#
+#
+# Copyright 2008 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
+# ident	"@(#)Makefile	1.4	08/04/02 SMI"
 
 include ../../Makefile.cmd
 
@@ -92,9 +108,11 @@ DFILES = \
 	xterm.d \
 	xwork.d
 
+HTMLFILES = index.html
+
 DEMOFILES = \
 	$(DFILES) \
-	index.html \
+	$(HTMLFILES) \
 	sunlogo.gif
 
 MKDEMO	= mkdemo
@@ -118,15 +136,11 @@ $(ROOTDEMODIR):
 $(ROOTDEMODIR)/%: %
 	$(INS.file)
 
-%.html:	$(DFILES) $(MKDEMO)	
+$(HTMLFILES):	$(DFILES) $(MKDEMO)	
 	./$(MKDEMO) $@
 
-%.d:	$(MKDEMO)	
+$(DFILES):	$(MKDEMO)	
 	./$(MKDEMO) $@
-
-%:	%.pl
-	$(CP) $< $@
-	$(CHMOD) 755 $@
 
 $(ROOTDEMOFILES): $(ROOTDEMODIR)
 
