/home/fox/release/dtrace/2008/dtrace-20080522.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -34,3 +34,5 @@ EXTRA_CFLAGS += \
 clean:
 	rm -rf .tmp_versions *.a *.o *.ko *.bak .*.d .*.cmd *.mod.c Module.symvers
 
+unl:
+	setuid root rmmod dtracedrv
