/home/fox/release/dtrace/2008/dtrace-20080530.tar.bz2

--- a/cmd/dtrace/makefile
+++ b/cmd/dtrace/makefile
@@ -9,7 +9,7 @@ LIBS = \
 
 COMPILE = $(CC) $(CFLAGS) -o dtrace \
 		-L../../build \
-		dtrace.o -ldtrace -lctf -llinux -lz -lpthread $$libelf -ldl
+		dtrace.o -ldtrace -lctf -llinux -lz -lrt -lpthread $$libelf -ldl
 
 all:	dtrace
 
