--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -15,6 +15,8 @@ dtracedrv-objs := \
 	dtrace_subr.o \
 	fasttrap_linux.o \
 	fbt_linux.o \
+	sdt_linux.o \
+	sdt_subr.o \
 	instr_size.o \
 	uncompress.o
 
