/home/fox/release/dtrace/2008/dtrace-20080615.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -15,6 +15,7 @@ dtracedrv-objs := \
 	dtrace_subr.o \
 	fasttrap_linux.o \
 	fbt_linux.o \
+	linux_pure.o \
 	sdt_linux.o \
 	sdt_subr.o \
 	systrace.o \
