--- a/libdtrace/common/makefile
+++ b/libdtrace/common/makefile
@@ -5,7 +5,7 @@ CPPFLAGS += -I../common \
 	-I../../linux \
 	-I../../libproc/common \
 	-I../../libctf/ \
-	-DCTF_OLD_VERSIONS
+	-DCTF_OLD_VERSIONS $(PTR32)
 CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64
 CPPFLAGS += -DYY_NO_INPUT
 
