/home/fox/release/dtrace/2008/dtrace-20080704.tar.bz2

--- a/cmd/dtrace/makefile
+++ b/cmd/dtrace/makefile
@@ -27,7 +27,7 @@ $(BINDIR)/dtrace.o: dtrace.c
 	$(CC) $(CFLAGS) -c \
 		-I../../uts/common \
 		-I../../libctf \
-		-I../../libdtrace/common \
+		-I../../libdtrace \
 		-I../../libproc/common \
 		-I../../linux \
 		dtrace.c
