/home/fox/release/dtrace/2008/dtrace-20080705.tar.bz2

--- a/libdtrace/makefile
+++ b/libdtrace/makefile
@@ -7,7 +7,7 @@ CPPFLAGS += -I. \
 	-I../libctf/ \
 	-DCTF_OLD_VERSIONS $(PTR32)
 CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64
-CPPFLAGS += -DYY_NO_INPUT
+#CPPFLAGS += -DYY_NO_INPUT
 
 LIB = ../build/libdtrace.a
 H = \
