/home/fox/release/dtrace/2008/dtrace-20080706.tar.bz2

--- a/drivers/dtrace/Makefile
+++ b/drivers/dtrace/Makefile
@@ -13,6 +13,8 @@ dtracedrv-objs := \
 	dtrace_isa.o \
 	dtrace_linux.o \
 	dtrace_subr.o \
+	fasttrap.o \
+	fasttrap_isa.o \
 	fasttrap_linux.o \
 	fbt_linux.o \
 	linux_pure.o \
