--- a/libctf/makefile
+++ b/libctf/makefile
@@ -2,7 +2,7 @@ CC=gcc -g
 COMMON = ../common/ctf
 CPPFLAGS += -I../common -I../common/ctf -I../uts/common/ \
 	-I$(COMMON) -I. \
-	-I../linux -DCTF_OLD_VERSIONS
+	-I../linux -DCTF_OLD_VERSIONS $(PTR32)
 CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64
 BINDIR = ../build
 
