/home/fox/release/dtrace/2008/dtrace-20081112.tar.bz2

--- a/usdt/cpp/makefile
+++ b/usdt/cpp/makefile
@@ -1,7 +1,7 @@
 CC=g++ -I../../uts/common
 #BITS=-m64
 CFLAGS=$(BITS)
-DTRACE=dtrace
+DTRACE=../../build/dtrace
 DTRACE_DRTI_O=../../build/drti.o
 
 all:	../../build/simple-cpp
