--- a/usdt/c/makefile
+++ b/usdt/c/makefile
@@ -1,7 +1,7 @@
 CC=gcc -I../../uts/common
 #BITS=-m64
 CFLAGS=$(BITS)
-DTRACE=dtrace
+DTRACE=../../build/dtrace
 DTRACE_DRTI_O=../../build/drti.o
 
 all:	../../build/simple-c
